debian chrome doesnt include times idfk

--- a/rendering/common.css
+++ b/rendering/common.css
@@ -25,6 +25,11 @@ body {
     src: url(fonts/ImpactMix.ttf);
 }
 
+@font-face {
+    font-family: timesnewroman;
+    src: url("fonts/times new roman.ttf");
+}
+
 .fitboxes {
     overflow: hidden;
     word-wrap: break-word;
